EFK-Logging/ingress-rule-elasticsearch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ben-ingress
  namespace: efklog
  annotations:
   cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: elasticsearch.adeyeletechhub.com.ng
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: elasticsearch-logging
              port:
                number: 9200
      
  tls:
      - hosts:
          - elasticsearch.adeyeletechhub.com.ng
        secretName: tls-secret
