EFK-Logging/ingress-rule-kibana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ben-ingress
  namespace: efklog
  annotations:
   cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.adeyeletechhub.com.ng
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kibana-logging
              port:
                number: 5601
      
  tls:
      - hosts:
          - kibana.adeyeletechhub.com.ng
        secretName: tls-secret
